[gd_scene load_steps=10 format=2]

[ext_resource path="res://entity/fx/death_body_parts.gd" type="Script" id=1]
[ext_resource path="res://assets/death_body_parts.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 5.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 2.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5, 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 4.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 4.5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
flatness = 0.23
gravity = Vector3( 0, 1000, 0 )
initial_velocity = 222.72
initial_velocity_random = 0.72
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color = Color( 0.745098, 0.101961, 0.0901961, 1 )

[node name="death_body_parts" type="Node2D"]
script = ExtResource( 1 )

[node name="Rigid_Skull" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Skull" type="Sprite" parent="Rigid_Skull"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1.09235, 8.18296, 29.8122, 16.9304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Skull"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Rigid_Bones" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Bones" type="Sprite" parent="Rigid_Bones"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.9288, 5.6066, 27.9719, 18.4026 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Bones"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Rigid_Bones2" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Bones2" type="Sprite" parent="Rigid_Bones2"]
rotation = 0.172788
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 33.849, 27.8703, 27.2358, 14.7221 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Bones2"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Rigid_Meat" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Meat" type="Sprite" parent="Rigid_Meat"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 5.87705, 28.9744, 18.2186, 12.3297 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Meat"]
position = Vector2( -0.5, 0 )
shape = SubResource( 4 )

[node name="Rigid_Meat2" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Meat2" type="Sprite" parent="Rigid_Meat2"]
scale = Vector2( 0.833333, 0.833333 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.198601, 45.9263, 30.3048, 15.2842 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Meat2"]
position = Vector2( 0, 0.5 )
shape = SubResource( 5 )

[node name="Rigid_Guts" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Guts" type="Sprite" parent="Rigid_Guts"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 31.821, 45.9263, 31.0954, 16.8653 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Guts"]
position = Vector2( -1, 0 )
shape = SubResource( 6 )

[node name="Rigid_Bones3" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Bones2" type="Sprite" parent="Rigid_Bones3"]
rotation = 0.172788
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 33.849, 27.8703, 27.2358, 14.7221 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Bones3"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="Rigid_Meat3" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Meat" type="Sprite" parent="Rigid_Meat3"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 5.87705, 28.9744, 18.2186, 12.3297 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Meat3"]
position = Vector2( -0.5, 0 )
shape = SubResource( 4 )

[node name="Rigid_Meat4" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Meat" type="Sprite" parent="Rigid_Meat4"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 5.87705, 28.9744, 18.2186, 12.3297 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Meat4"]
position = Vector2( -0.5, 0 )
shape = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 100
lifetime = 0.5
local_coords = false
process_material = SubResource( 7 )

[node name="Rigid_Bones4" type="RigidBody2D" parent="."]
mass = 4.0
gravity_scale = 4.5

[node name="Bones" type="Sprite" parent="Rigid_Bones4"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.9288, 5.6066, 27.9719, 18.4026 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rigid_Bones4"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="TimerDeath" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]
